# lark-msg-monitor

./: .env  main.py  pyproject.toml
frontend/: pnpm-lock.yaml
frontend/apps/docs/docs/guide/: index.md
frontend/apps/main/: package.json
frontend/apps/main/ai-doc/: prd.md
frontend/apps/main/src/: App.css  index.tsx
frontend/apps/main/src/api/: message.ts  report.ts
frontend/apps/main/src/components/: root.tsx
frontend/apps/main/src/pages/: analysis.tsx  home.tsx  sync-report.tsx
frontend/apps/main/src/router/: index.ts
src/common_utils/: start_all.py
src/msg_monitor/: start.py
src/msg_monitor/service/: index.py
src/msg_monitor/utils/: client.py  common.py  org_msgs.py  store.py
src/web_server/: start.py
src/web_server/router/: index.py  report.py  root.py
src/web_server/service/: report.py
src/web_server/utils/: db_helper.py  msg_parser.py  query_msgs.py  sync_lark.py
